# cmwen.github.io

./: .env.example  .gitignore  .npmrc  .prettierignore  .service-card.json  404.html  AGENTS.MD  AGENTS.md  Bookmarks.9cb938a1.js  Dockerfile.locallink  README.md  Solid.03307ca5.js  Solid.22c10db5.js  Solid.e1f4b52c.js  astro.config.ts  client.22355011.js  client.5b4529ca.js  client.7e075eb5.js  eslint.config.js  index.html  package-lock.json  package.json  params.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  repl-component.html  robots.txt  rss.xml  sitemap-0.xml  sitemap-index.xml  tailwind.config.ts  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-config.json  copilot-instructions.md  dependabot.yml
.opencode/: opencode.json
_astro/: AgentsApp.B4x_mzcK.js  AgentsApp.BV63Du2i.js  AgentsApp.C_of7OC7.js  AgentsApp.CtTiqIlJ.js  AgentsApp.D9Ct4X8X.js  AgentsApp.DD2BEJUO.js  AgentsApp.DgP8Of8E.js  AgentsApp.Dqko0Ody.js  AgentsApp.DxMuupRj.js  AgentsApp.Edev7rN4.js  AgentsApp.MDMsAMHR.js  AgentsApp.Mc8pKnxW.js  AudioPlayer.1aBqPIZB.js  AudioPlayer.BnOLpvOi.js  AudioPlayer.BqOxYljD.js  AudioPlayer.COWYYnbK.js  AudioPlayer.CYfr8_kk.js  AudioPlayer.CgA5q-iY.js  AudioPlayer.D3m08eay.js  AudioPlayer.DpWtBV_a.js  AudioPlayer.DxyHS5E7.js  AudioPlayer.SGBdE3up.js  AudioPlayer.r6GaPCPr.js  Bookmarks.90e33394.js  ChatLink.7vsmpQAm.js  ChatLink.B0ze-lWw.js  ChatLink.BVPfwOf5.js  ChatLink.BiI1YxQJ.js  ChatLink.Bt8255ym.js  ChatLink.CAriHuh0.js  ChatLink.CTV-UBTq.js  ChatLink.CUYWtb0T.js  ChatLink.D2PDnR9D.js  ChatLink.L1GCjzl5.js  (+94 more)
(+941 files in other folders)
